--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <title>Facebook-log in or sign up</title>
@@ -80,9 +80,6 @@
             </select>
             <select name="Year" class="birth">
                 <option>Year</option>
-                <option>1987</option>
-                <option>1988</option>
-                <option>1989</option>
                 <option>1990</option>
                 <option>1991</option>
                 <option>1992</option>
